--- a/Beginners-Guide-to-Jupyter-Notebook.ipynb
+++ b/Beginners-Guide-to-Jupyter-Notebook.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## From the setup to the descriptive statistics for IB Mathematics"
+    "## From the setup to the descriptive statistics"
    ]
   },
   {
@@ -25,7 +25,7 @@
     "- Installing Anaconda\n",
     "- Python libraries\n",
     "- Data attributes\n",
-    "- Descritive Statistics\n",
+    "- Descriptive Statistics\n",
     "- Basic plotting"
    ]
   },
@@ -35,15 +35,17 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "In this article we go through descriptive statistics using the Jupyter notebook. \n",
+    "In this beginner's guide to Jupyter Notebook, we go through how to get started to basic descriptive statistics. This article is intended for high-school students (or above) with little experience with coding.\n",
     "\n",
-    "The Jupyter Notebook is an open-source web application that allows you to create and share documents that contain live code, equations, visualizations and narrative text. –description from [Project Jupyter](https://jupyter.org/)\n",
+    "The Jupyter Notebook is an open-source web application that allows you to create and share documents that contain live code, equations, visualizations, and narrative text. –description from [Project Jupyter](https://jupyter.org/)\n",
     "\n",
-    "The Jupyter system supports over 100 programming languages including Python. Currently Python is the most popular language for Data Science.\n",
+    "The Jupyter system supports over 100 programming languages including Python. Currently, Python is the most popular language for Data Science.\n",
     "\n",
     "<center><img src=\"image/pythonvsr.png\"></center>\n",
     "\n",
     "You can see the original chart [here](https://trends.google.com/trends/explore?date=today%205-y&q=python%20data%20science,R%20data%20science).\n",
+    "\n",
+    "I created a Jupyer slideshow and you can download it [here](https://rise.readthedocs.io/en/maint-5.6/). You need to install [RISE](https://rise.readthedocs.io/en/maint-5.6/) to use this slideshow.\n",
     "\n",
     "We are going to use Python libraries, [Numpy](https://numpy.org/devdocs/index.html), [Pandas](https://pandas.pydata.org/), [Matplotlib](https://matplotlib.org/) and [Seaborn](https://seaborn.pydata.org/). Python library is a collection of functions and methods that allows you to perform many actions without writing your code. \n"
    ]
@@ -54,9 +56,9 @@
    "source": [
     "# Installing Anaconda\n",
     "\n",
-    "We are going to install Anaconda. Anaconda is the standard platform for Python data science.\n",
+    "We are going to install Anaconda. Anaconda is the standard platform for Python data science. Anaconda will install all necessary [packages](https://docs.anaconda.com/anaconda/packages/old-pkg-lists/4.3.1/py35/) for our purpose.\n",
     "\n",
-    "From https://www.anaconda.com/distribution/, download 3.7 version and install it.\n",
+    "From https://www.anaconda.com/distribution/, download a 3.7 version and install it.\n",
     "\n",
     "<center><img src=\"image/python3-7.png\"></center>\n",
     "\n",
@@ -68,15 +70,30 @@
     "\n",
     "<center><img src=\"image/jupyter.png\"></center>\n",
     "\n",
-    "Create a folder by clicking New button on the top right. Then click Folder. You need to rename the folder to IBMath. In the IBMath folder, create a file called `stats` by clicking New > Python 3. \n",
+    "To create a folder, click the New button on the top right. Then click Folder. \n",
     "\n",
-    "We also need to create a folder called Data under the IBMath folder.\n",
+    "<center><img src=\"image/folder.png\"></center>\n",
+    "\n",
+    "You need to rename the folder to Statistics. \n",
+    "\n",
+    "<center><img src=\"image/rename.png\"></center>\n",
+    "<center><img src=\"image/rename2.png\"></center>\n",
+    "\n",
+    "Create a folder called Data and we are going to store all our data in this folder.\n",
     "\n",
     "<center><img src=\"image/data.png\"></center>\n",
     "\n",
-    "In the Data folder, create a file called mydata1.csv.\n",
+    "In the Data folder, create a file called mydata1.csv\n",
     "\n",
-    "Copy data from http://bit.ly/2M1yrW7 and paste it to the csv file. "
+    "<center><img src=\"image/csvfile.png\"></center>\n",
+    "\n",
+    "<center><img src=\"image/csvfile2.png\"></center>\n",
+    "\n",
+    "Open http://bit.ly/2M1yrW7 in a browser. Command(or ctrl in windows) + A to select all and Command + C to copy. Command + V to paste it to the mydata1.csv and Command + S to save the file.\n",
+    "\n",
+    "In the Statistics folder, create a file called Test by New > Python 3\n",
+    "\n",
+    "<center><img src=\"image/statsfolder.png\"></center>"
    ]
   },
   {
@@ -85,8 +102,8 @@
    "source": [
     "# Python libraries\n",
     "\n",
-    "[Numpy](https://docs.scipy.org/doc/numpy/reference/) and [Pandas](https://pandas.pydata.org/pandas-docs/stable/index.html) are two of the most used libraries in scientific computing, Data science and machine learning. Pandas is built on top of Numpy. Both offer similar functions. \n",
-    "Numpy provides objects for multi-dimensional array and Pandas provide in-memory 2D table object called DataFrame.\n",
+    "[Numpy](https://docs.scipy.org/doc/numpy/reference/) and [Pandas](https://pandas.pydata.org/pandas-docs/stable/index.html) are two of the most used libraries in scientific computing, Data science, and machine learning. Pandas is built on top of Numpy. Both offer similar functions. \n",
+    "Numpy provides objects for multi-dimensional array and Pandas provides an in-memory 2D table object called DataFrame.\n",
     "\n",
     "Python offers a variety of packages for plotting data. Seaborn and Matplotlib are two of Python's most powerful visualization libraries. \n",
     "\n",
@@ -110,9 +127,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "After typing the above, press SHIFT + RETURN. This will run the code you wrote. If you have written correctly, nothing is going to happen. But if you have misspelled then it will return an error. Please read the last line of error and fix the problem.\n",
     "\n",
-    "We are going to read the csv file store the data in a variable called df.\n",
-    "We use `shape` to print the dimension of our data. `info()` prints a concise summary of our data."
+    "We are going to read the CSV file and store the data in a variable called df.\n"
    ]
   },
   {
@@ -128,6 +145,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Please do not forget to press SHIFT + RETURN."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Data Attributes\n",
     "\n",
     "We are going to see the overview of our data using `shape`, `info()`, `head()`, `tail()`, `describe()`. "
@@ -137,8 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`shape` prints the dimension and `info()` prints a concise summary of our data.\n",
-    "Press SHIFT + RETURN to run the programme."
+    "We use `shape` to print the dimension of our data. `info()` prints a concise summary of our data. Press SHIFT + RETURN to run the program."
    ]
   },
   {
@@ -147,10 +170,29 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "(569, 33)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data dimension:  (569, 33)\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 569 entries, 0 to 568\n",
       "Data columns (total 33 columns):\n",
@@ -193,9 +235,6 @@
     }
    ],
    "source": [
-    "shape = df.shape\n",
-    "print('Data dimension: ', shape)\n",
-    "\n",
     "df.info()"
    ]
   },
@@ -208,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +459,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +689,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,12 +702,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For Statistical overview you can use `describe()`. It will print mean, standard deviation, min, etc."
+    "For the Statistical overview, `describe()` prints the mean, standard deviation, min, etc."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -977,7 +1016,7 @@
        "[8 rows x 32 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,7 +1029,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Descritive Statistics"
+    "# Descriptive Statistics"
    ]
   },
   {
@@ -1002,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1070,12 +1109,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "As an exercise, print `all_median`, `all_max`.\n",
+    "\n",
+    "\n",
     "Let's focus on `radius_mean` in our data. We set a variable called `target`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,12 +1128,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We find the max, min and range of `radius_mean`"
+    "We find the max, min, and range of `radius_mean`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1113,12 +1155,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The print command prints out within the bracket. Three `%.1` print with one decimal place and will be replaced with max, min, and range. If you want to know more details, please read this [article](https://www.python-course.eu/python3_formatted_output.php)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Let's find out the mean, median and mode."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1146,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1182,16 +1231,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1225fd750>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1224e3b90>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1213,17 +1262,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above diagram is the line graph of `radius_mean`.\n",
+    "\n",
+    "By adding `kind='hist'` to `plot()`, you can plot a histogram."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1254bd190>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1245f78d0>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1248,21 +1306,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Or you can add `hist()` afer `plot`. "
+    "By adding `hist()` after `plot` also prints a histogram. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x122c8d910>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x121db54d0>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1292,16 +1350,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1254bd250>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x121e934d0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1331,16 +1389,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x122f25550>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x12204b3d0>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1378,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1414,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1447,17 +1505,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Seaborn builds on top of Matplotlib and introduces additional plot types. It also makes your traditional Matplotlib plots look a bit prettier. (from [Quora](https://www.quora.com/What-is-the-difference-between-Matplotlib-and-Seaborn-Which-one-should-I-learn-for-studying-data-science))"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1231f9ad0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x122300dd0>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1479,13 +1544,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1499,20 +1557,6 @@
     "- https://jupyter4edu.github.io/jupyter-edu-book/\n",
     "- https://matplotlib.org/3.1.1/gallery/pyplots/boxplot_demo_pyplot.html#sphx-glr-gallery-pyplots-boxplot-demo-pyplot-py"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
