--- a/Poisson Distribution.ipynb
+++ b/Poisson Distribution.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Poisson Distribution for IB Diploma Mathematics"
+    "# Poisson Distribution for IB Diploma Mathematics\n",
+    "\n",
+    "## How many times an event is likely to occur within a specified period of time."
    ]
   },
   {
