--- a/Beginners-Guide-to-Chi-square-test-for-independence-with-Jupyter-Notebook.ipynb
+++ b/Beginners-Guide-to-Chi-square-test-for-independence-with-Jupyter-Notebook.ipynb
@@ -4,9 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The expected asked “Hey the observed! How different are you from us?”\n",
+    "# Beginners Guide to Chi square test for independence with Jupyter Notebook\n",
     "\n",
-    "## Chi-square test for independence for IB Diploma Mathematics"
+    "## "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Table of contents\n",
+    "\n",
+    "- Introduction\n",
+    "- What is the Chi-square test for\n",
+    "- "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> The expected asked “Hey the observed! How different are you from us?”"
    ]
   },
   {
@@ -1090,7 +1108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
