Update Chi independence

--- a/Beginners-Guide-to-Chi-square-test-for-independence-with-Jupyter-Notebook.ipynb
+++ b/Beginners-Guide-to-Chi-square-test-for-independence-with-Jupyter-Notebook.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Beginners Guide to Chi square test for independence with Jupyter Notebook\n",
-    "\n",
-    "## "
+    "# Beginners Guide to Chi square test for independence with Jupyter Notebook"
    ]
   },
   {
@@ -16,8 +14,26 @@
     "# Table of contents\n",
     "\n",
     "- Introduction\n",
-    "- What is the Chi-square test for\n",
-    "- "
+    "- SciPy package\n",
+    "- Simple setup\n",
+    "- $\\chi^2$ value, p-value, Degree of freedom, expected values\n",
+    "- Vertical and horizontal data\n",
+    "- Critical values\n",
+    "- The null and alternative hypotheses"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Introduction\n",
+    "\n",
+    "The Chi-square test for independence is also called Pearson’s chi-square test. There are three ways to use the Chi-square. The Chi-square test for independence shows how two sets of data are independent from each other.  Chi-square of Goodness of fit test shows how different your data to the expected value. The [test for homogeneity determines](https://courses.lumenlearning.com/wmopen-concepts-statistics/chapter/test-of-homogeneity/) if two or more populations have the same distribution of a single categorical variable. \n",
+    "\n",
+    "In this article we are going to explore Chi-square test for independence with Jupyter Notebook. If you do not have the Jupyter Notebook, please read [\"Beginner’s Guide to Jupyter Notebook\n",
+    "From\"](http://bit.ly/2S1yHIm) first. Oh by the way we pronounce \"Chi\" as \"kai\" like \"kite\", NOT \"chi\" in \"Chili\". $\\chi$ is a Greek letter for \"Chi\", so $\\chi^2$ and Chi-square are the same.\n",
+    "\n",
+    "Chi-square test for independece can be used in science, economics, marketing, or other various feilds."
    ]
   },
   {
@@ -31,17 +47,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When you have a large amount of data you can use Python instead of a calculator to find Chi-square. It is useful for internal assessment and also extended essay. In this article, I will show you how to do it. You can find the all the codes [here](http://bit.ly/2EaqgST).\n",
+    "# SciPy package\n",
     "\n",
-    "The easiest way to use Python is Jupyter Notebook. Anaconda is a free and open-source distribution of the Python programming languages for scientific computing. Jupyter Notebook is included in Anaconda. You can install Anaconda in this [link](https://www.anaconda.com/distribution/).\n",
+    "In order to find Chi-square, we are going to use [SciPy](https://www.scipy.org/) package. SciPy is a Python-based open-source software for mathematics, science and engineering.  [`scipy.stats.chi2_contingency`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.chi2_contingency.html) is a useful tool to use and please do not confuse with [`scipy.stats.chisquare`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.chisquare.html?highlight=stats%20chisquare#scipy.stats.chisquare). \n",
     "\n",
-    "The Chi-square test for independence is also called Pearson’s chi-square test. In order to find Chi-square with Python, scipy.stats.chi2_contingency is a useful tool to use. Please do not confuse with scipy.stats.chisquare . You can find out more details here.\n",
-    "First, we need to import chi2_contingency , pandas and numpy libraries."
+    "`scipy.stats.chi2_contingency` is for Chi-square test for independence and `scipy.stats.chisquare` is for Chi-square of Goodness of fit test.\n",
+    "\n",
+    "You can find out more details [here](https://stats.stackexchange.com/questions/110718/chi-squared-test-with-scipy-whats-the-difference-between-chi2-contingency-and)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Simple setup\n",
+    "\n",
+    "We are going to import chi2_contingency , pandas and numpy libraries and create a small sample data.\n",
+    "\n",
+    "You can find the all the codes [here](http://bit.ly/2EaqgST)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,12 +82,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let’s say we collected data on the favorite color of T-shirts for men and women. We want to find out whether color and gender are independent or not."
+    "Let’s say we collected data on the favorite color of T-shirts for men and women. We want to find out whether color and gender are independent or not. We create a dataframe and we will store our data in `tshirts`. Pandas `index` and `columns` is used to name rows and columns. In order to see what is in our `tshirts`, we just write it at the end. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -91,16 +119,16 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Male</th>\n",
+       "      <td>Male</td>\n",
        "      <td>48</td>\n",
-       "      <td>12</td>\n",
+       "      <td>22</td>\n",
        "      <td>33</td>\n",
-       "      <td>57</td>\n",
+       "      <td>47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Female</th>\n",
+       "      <td>Female</td>\n",
        "      <td>35</td>\n",
-       "      <td>46</td>\n",
+       "      <td>36</td>\n",
        "      <td>42</td>\n",
        "      <td>27</td>\n",
        "    </tr>\n",
@@ -110,11 +138,11 @@
       ],
       "text/plain": [
        "        Balck  White  Red  Blue\n",
-       "Male       48     12   33    57\n",
-       "Female     35     46   42    27"
+       "Male       48     22   33    47\n",
+       "Female     35     36   42    27"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,8 +150,8 @@
    "source": [
     "tshirts = pd.DataFrame(\n",
     "    [\n",
-    "        [48,12,33,57],\n",
-    "        [35,46,42,27]\n",
+    "        [48,22,33,47],\n",
+    "        [35,36,42,27]\n",
     "    ],\n",
     "    index=[\"Male\",\"Female\"],\n",
     "    columns=[\"Balck\",\"White\",\"Red\",\"Blue\"])\n",
@@ -131,24 +159,150 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SciPy's `chi2_contingency()` returns $\\chi^2$ value, p-value, degree of freedom and expected values."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(33.76146477535758, 2.2247293911334693e-07, 3, array([[41.5, 29. , 37.5, 42. ],\n",
-       "        [41.5, 29. , 37.5, 42. ]]))"
+       "(11.56978992417547,\n",
+       " 0.00901202511379703,\n",
+       " 3,\n",
+       " array([[42.93103448, 30.        , 38.79310345, 38.27586207],\n",
+       "        [40.06896552, 28.        , 36.20689655, 35.72413793]]))"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "chi2_contingency(tshirts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3.8453857725970124,\n",
+       " 0.04988304516839146,\n",
+       " 1,\n",
+       " array([[222.64241164, 266.35758836],\n",
+       "        [215.35758836, 257.64241164]]))"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pets = pd.DataFrame(\n",
+    "    [\n",
+    "        [207,282],\n",
+    "        [231,242]\n",
+    "    ],\n",
+    "    index=[\"Male\",\"Female\"],\n",
+    "    columns=[\"Cat\",\"Dog\"])\n",
+    "chi2_contingency(pets)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Expected values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can find the expected values in the forth returned value in an array form. Let's print the expected values in a friendly way. We again use the Pandas dataframe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Balck</th>\n",
+       "      <th>White</th>\n",
+       "      <th>Red</th>\n",
+       "      <th>Blue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>Male</td>\n",
+       "      <td>42.931034</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>38.793103</td>\n",
+       "      <td>38.275862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Female</td>\n",
+       "      <td>40.068966</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>36.206897</td>\n",
+       "      <td>35.724138</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Balck  White        Red       Blue\n",
+       "Male    42.931034   30.0  38.793103  38.275862\n",
+       "Female  40.068966   28.0  36.206897  35.724138"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expected=chi2_contingency(tshirts)[3]\n",
+    "pd.DataFrame(\n",
+    "    data=expected[0:,0:], \n",
+    "    index=[\"Male\",\"Female\"],\n",
+    "    columns=[\"Balck\",\"White\",\"Red\",\"Blue\"]\n",
+    ")"
    ]
   },
   {
@@ -162,21 +316,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can find $\\chi^2$ in the first returned value."
+    "You can find $\\chi^2$ in the first returned value from `chi2_contingency`. The formula for the Chi-square is: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "\\chi^2=\\Sigma\\frac{(O-E)^2}{E}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here O is the actual value and E is the expected value. This equation tells us to find the square of difference between the actual value and expected value and divide it by the expected value. Then add all together to find the $\\chi^2$ value. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "\\frac{(48-42.93)^2}{42.93}+\\frac{(22-30)^2}{30}+\\frac{(33-38.79)^2}{38.79}+\\frac{(47-38.28)^2}{38.28}+\\frac{(35-40.07)^2}{40.07}+\\frac{(36-28)^2}{28}+\\frac{(42-36.21)^2}{36.21}+\\frac{(27-35.725)^2}{35.72}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This what `chi2_contingency` is doing behind the scene. Since Python is 0 based index, in order to print the $\\chi^2$ we need to use `[0]` which is the first value."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "33.76146477535758"
+       "11.56978992417547"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can find the p-value in the second returned value."
+    "You can read more details about p-value [here](https://towardsdatascience.com/p-values-explained-by-data-scientist-f40a746cfc8). You can find the p-value in the second returned value."
    ]
   },
   {
@@ -254,42 +440,6 @@
    "source": [
     "dof=chi2_contingency(tshirts)[2]\n",
     "dof"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Expected values"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can find the expected values in the forth returned value in an array form. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[41.5, 29. , 37.5, 42. ],\n",
-       "       [41.5, 29. , 37.5, 42. ]])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "expected=chi2_contingency(tshirts)[3]\n",
-    "expected"
    ]
   },
   {
